# Simple-SMTP-server

./: CMakeLists.txt  LICENSE.md  README.md  database.c  database.h  includings.h  main.c  replies.h
